--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "One random inspiring quote.",
   "main": "./app/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -22,5 +23,13 @@
   "bugs": {
     "url": "https://github.com/Onra/inspiringquote/issues"
   },
-  "homepage": "https://github.com/Onra/inspiringquote#readme"
+  "homepage": "https://github.com/Onra/inspiringquote#readme",
+  "dependencies": {
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
+  },
+  "devDependencies": {
+    "html-webpack-plugin": "^2.28.0",
+    "webpack": "^2.2.1"
+  }
 }
