--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "css-loader": "^0.26.1",
+    "file-loader": "^0.10.0",
+    "image-webpack-loader": "^3.2.0",
     "node-sass": "^4.5.0",
     "sass-loader": "^6.0.0",
     "style-loader": "^0.13.1",
